# MEMZ

./: .travis.yml  README.md
NyanMBR/: CMakeLists.txt
NyanMBR/Data/Song/: README.md
NyanMBR/Source/Stage2/: main.asm
WindowsTrojan/: Makefile
WindowsTrojan/Data/: KillMessages.txt  Note.txt  Sites.txt
WindowsTrojan/Source/: MEMZ.h
WindowsTrojan/Source/Destructive/: Main.c
WindowsTrojan/Source/Payloads/: PayloadCursor.c  PayloadMessageBox.c
