cmake_minimum_required (VERSION 3.0.2)
project(NyanMBR C ASM)
find_package(PythonInterp 2 REQUIRED)
file(GLOB FRAMES RELATIVE ${CMAKE_SOURCE_DIR}/Data/Image/Frames *.png)
file(GLOB SPECIAL RELATIVE ${CMAKE_SOURCE_DIR}/Data/Image/Special *.png)
add_custom_target(frames.bin ALL ${PYTHON_EXECUTABLE} ${CMAKE_SOURCE_DIR}/Data/Image/png2bin.py ${FRAMES} frames.bin)
add_custom_target(special.bin ALL ${PYTHON_EXECUTABLE} ${CMAKE_SOURCE_DIR}/Data/Image/png2bin.py ${FRAMES} special.bin)
add_custom_target(song.bin ALL ${PYTHON_EXECUTABLE} ${CMAKE_SOURCE_DIR}/Data/Song/midi2bin.py ${CMAKE_SOURCE_DIR}/Data/Song/nyan.mid song.bin)
add_executable(compress Source/Compressor/compress.c)
file(GLOB STAGE2SOURCE RELATIVE ${CMAKE_SOURCE_DIR}/Source/Stage2 *.asm)
add_library(OUTPUT stage2.bin COMMAND ${CMAKE_ASM_COMPILER} ARGS -o stage2.bin ${STAGE2SOURCE})
add_library(OUTPUT stage2-compressed.bin COMMAND compress DEPENDS stage2.bin)
add_custom_target(stage2-compressed.bin ALL compress stage2.bin stage2-compressed.bin DEPENDS stage2.bin)
